Fix initial threshold impl

--- a/av1an-core/Cargo.toml
+++ b/av1an-core/Cargo.toml
@@ -37,7 +37,7 @@ crossbeam-channel = "0.5.1"
 crossbeam-utils = "0.8.5"
 textwrap = "0.14.2"
 path_abs = "0.5.1"
-av-scenechange = { version = "0.7.2", default-features = false }
+av-scenechange = { git = "https://github.com/redzic/av-scenechange", branch = "sc-thresh", default-features = false }
 y4m = "0.7.0"
 thiserror = "1.0.30"
 paste = "1.0.5"
